# cerberus

./: .env.example  .gitignore  Claude.md  README.md  SESSION_10_LOG.md  SESSION_10_VERIFICATION_RECORD.md  arch0204.md  architecure.md  codemap.md  demoflow.md  execution.md  invariants.md  pyproject.toml  requirements.md  requirements.txt
.claude/: settings.local.json
cerberus/: api.py  config.py  graph.py  state.py
cerberus/heads/: cost_head.py  iam_head.py  security_head.py
cerberus/models/: cost_record.py  iam_ticket.py  security_flag.py
cerberus/nodes/: access_node.py  approve_node.py  audit_node.py  enrich_node.py  execute_node.py  reason_node.py  revalidate_node.py  scan_node.py
cerberus/routes/: cost_routes.py  iam_routes.py  security_routes.py  ticket_routes.py
cerberus/services/: pdf_report.py
cerberus/tools/: chroma_client.py  gcp_retry.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: AgentTrace.tsx  ApprovalTable.test.tsx  ApprovalTable.tsx  CostCenter.tsx  ExecutePanel.test.tsx  ExecutePanel.tsx  IamPanel.tsx  SecurityHub.tsx
scripts/: demo_guardrails.py  demo_session1.py  print_run_summary.py  run_demo_smoke_test.py  seed_sandbox.py  verify_seed.py
tests/: conftest.py  test_access.py  test_audit.py  test_cost_head.py  test_e2e.py  test_enrich.py  test_execute.py  test_foundation.py  test_graph.py  test_iam_head.py  test_pdf_report.py  test_reason.py  test_routes.py  test_scan.py  test_security_head.py
tests/fixtures/: sample_resources.json
